--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -68,7 +68,10 @@ hr {
 aside {
     margin: auto;
 }
-
+.card-product {
+    width: 100%;
+    height: 95%;
+}
 /**
 * CSS - Menu Multilevel Bootstrap 4
 */
