--- a/mvCommerce/Views/Shared/Components/Menu/Default.cshtml
+++ b/mvCommerce/Views/Shared/Components/Menu/Default.cshtml
@@ -1,4 +1,7 @@
 ﻿@model List<Category>
+@{ 
+    var search = Context.Request.Query["search"];
+}
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-info" id="navMenu">
     <a class="navbar-brand" href="/"> mvCommerce</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -40,9 +43,9 @@
                 <a class="nav-link" href="/Home/Contact"><i class="far fa-address-book"></i> Contato </a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" id="formMenu">
-            <input class="form-control mr-sm-2" type="text" placeholder="O que você está procurando?">
-            <div id="searchButton" class="btn btn-outline-warning my-2 my-sm-0"><i class="fas fa-search"></i></div>
+        <form class="form-inline my-2 my-lg-2" id="formMenu" method="get">
+            <input class="search form-control mr-sm-2" type="text" name="search" value="@search" placeholder="O que você está procurando?">
+            <button id="searchButton" class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
             @*<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Pesquisar</button>*@
             <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/Login" id="login"><i class="fas fa-user-alt"></i> Login</a>
             <a class="btn btn-outline-warning my-2 my-sm-0" href="/Home/ShoppingCart" id="cart"><i class="fas fa-shopping-cart"></i> Carrinho</a>
