--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -59,6 +59,13 @@ hr {
 .card {
     box-shadow: 1px 1px 1px 2px #00CED1;
 }
+.card-product:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
 
 .box {
     box-shadow: 1px 2px 1px 3px #d3d3d3;
