--- a/mvCommerce/Views/Home/Index.cshtml
+++ b/mvCommerce/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Index";
     var search = Context.Request.Query["search"];
+    var ordering = Context.Request.Query["ordering"].ToString();
 }
     <head>
         <link rel="stylesheet" href="~/css/Index.css" />
@@ -72,15 +73,15 @@
         @if (Model.List.Count > 0)
         {
     <div class="container" id="code_prod_complex">
-        <div class="row">
-            <div class="offset-md-10 col-md-2">
-                <i class="fas fa-filter"></i> Filtar<select id="ordering" asp-items="Model.Ordering"> </select>
+        <div class="row mb-5">
+            <div class="offset-md-9 mb-5 col-md-3">
+                 <i class="fas fa-filter"></i> Ordenar<select asp-for="@ordering" class="form-control"   id="ordering" asp-items="Model.Ordering"></select>
             </div>
         </div>
         <div class="row">
             @foreach (var product in Model.List)
             {
-                <div class="col-md-3">
+                <div class="col-md-3 mb-2">
                     <figure class="card card-product">
                         <div class="img-wrap">
                             @if (product.Images != null && product.Images.Count() > 0)
@@ -104,7 +105,7 @@
                         <div class="bottom-wrap">
                             <div class="price-wrap h5">
                                 <span class="price-new">@product.Price.ToString("C")</span>
-                                <a class="btn btn-outline-success"><img src="~/icons/cart.png" /></a>
+                                <button class="btn btn-outline-success" title="Adiconar no carrinho"><img src="~/icons/cart.png"/></button>
                             </div>
                             @{
                                 var division = product.Price / 12;
@@ -117,9 +118,8 @@
 
             }
         </div>
-        @Html.PagedListPager((IPagedList)Model.List, page => Url.Action("Index", new { page  = page, search = search}))
+        @Html.PagedListPager((IPagedList)Model.List, page => Url.Action("Index", new { page  = page, search = search, ordering = ordering}))
     </div>
-           
         }
     </main>
     @{
