--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
         <script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
         <script src="/resources/lib/popper1.14.6/popper.min.js"></script>
         <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+        <script src="~/js/ActionsClient.js"></script>
     </environment>
     @RenderSection("Scripts", required: false)
 </body>
