--- a/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Collaborator/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model X.PagedList.IPagedList<mvCommerce.Models.Collaborator>
 @{
     ViewData["Title"] = "Index";
+    var search = Context.Request.Query["search"];
 }
 
 @if (TempData["MSG_S"] != null)
@@ -8,8 +9,20 @@
     <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
 }
 <h1>Colaboradores</h1>
-<a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
 <br />
+<br />
+<form method="get">
+    <div class="form-row">
+        <div class="col">
+            <input class="form-control mr-sm-2" name="search" type="search" placeholder="Pesquise pelo nome ou email do cliente" aria-label="Search">
+        </div>
+        <button type="submit" class="btn btn-outline-info my-2 my-sm-0">Pesquisar</button>
+    </div>
+</form>
+<br />
+<br />
+<a asp-action="Register" class="btn btn-info my-2 my-sm-0">Cadastrar</a>
+
 <br />
 @if (Model.Count > 0)
 {
@@ -40,7 +53,7 @@
             </tbody>
         </table>
     </div>
-    @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page = page, search = search }))
 }
 else
 {
