--- a/mvCommerce/Views/Home/Index.cshtml
+++ b/mvCommerce/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="~/css/Index.css" />
     </head>
     <main role="main">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide mt-5 col-md-8 center" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -16,7 +16,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="first-slide" src="~/img/10.jpg"
                          alt="First slide">
                     <div class="container">
                         <div class="carousel-caption text-left">
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="second-slide" src="~/img/11.jpg"
                          alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="third-slide" src="~/img/12.jpg"
                          alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption text-right">
@@ -95,9 +95,9 @@
                         </div>
                         <figcaption class="info-wrap">
                             <h4 class="title">@product.Name</h4>
-                            @if (product.Description.Length > 15)
+                            @if (product.Description.Length >= 5)
                             {
-                                string value = product.Description.Substring(0, 15);
+                                string value = product.Description.Substring(0, Math.Min(25, product.Description.Length));
                                 <span>@value ...</span>
                             }
 
