--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -2,6 +2,7 @@
     padding-top: 50px;
     padding-bottom: 20px;
     background-color: #e9e9e9;
+    margin:auto;
 }
 
 label {
@@ -82,10 +83,19 @@ aside {
     width: 100%;
     height: 95%;
 }
-
+ul{
+    color:white;
+}
+.carousel-inner {
+    margin: auto;
+}
 /**
 * CSS - Menu Multilevel Bootstrap 4
 */
+.dropdown-menu {
+    background: rgba(255, 255, 255, 0.8);
+}
+
 .dropdown-submenu {
     position: relative;
 }
