--- a/mvCommerce/Views/_ViewImports.cshtml
+++ b/mvCommerce/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using mvCommerce
 @using mvCommerce.Models
+@using mvCommerce.Models.ViewModels;
 @using X.PagedList;
 @using X.PagedList.Mvc.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
