--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -4,6 +4,9 @@
     background-color: #e9e9e9;
     margin:auto;
 }
+#navMenu{
+    opacity: 0.9;
+}
 
 label {
     color: black;
@@ -38,7 +41,7 @@ button {
     color: black;
 }
 
-a{
+a {
     color: #00CED1;
 }
 #dropdownMenu1{
