Fix bug of login and improvement layout

--- a/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
@@ -36,7 +36,8 @@
 </head>
 <body>
     <nav class="navbar sticky-top bg-info flex-md-nowrap p-0">
-        <a href="/" class="logo"><h5 class="col-1" id="logo">mvCommerce</h5></a>
+        
+        <a href="/" class="logo" id="logo"><img src="~/img/logo.png" style="height:30px; width:30px; margin-right:5px; margin-left:10px;" />CompraTudo</a>
         @*<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">*@
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
