Implementing link to categories/products

--- a/mvCommerce/Views/Product/CategoryList.cshtml
+++ b/mvCommerce/Views/Product/CategoryList.cshtml
@@ -1,10 +1,15 @@
-﻿
+﻿@model Category
 @{
     ViewData["Title"] = "Categoria";
     var slug = ViewContext.RouteData.Values["slug"];
 }
-<br class="clearfix"/>
-<br class="clearfix"/>
+<br class="clearfix" />
+<br class="clearfix" />
+<div class="container">
+    <div class="row">
+        <span class="col-md-12" id="breadcrumbs" style="position:absolute; margin-top:27px;"> Categoria <img style="height:10px;" src="~/icons/next.png"/> @Model.Name</span>
+    </div>
+</div>
 <vc:listing-product></vc:listing-product>
 
 
