--- a/mvCommerce/Views/Shared/Components/Menu/Default.cshtml
+++ b/mvCommerce/Views/Shared/Components/Menu/Default.cshtml
@@ -3,7 +3,7 @@
     var search = Context.Request.Query["search"];
 }
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-info" id="navMenu">
-        <a class="navbar-brand" href="/"><img style="height:30px; width:30px;" src="~/img/logo.png" /> CompraTudo</a>
+        <a class="navbar-brand" href="/"><img class="mr-1" style="height:30px; width:30px;" src="~/img/logo.png" /> CompraTudo</a>
        
         <hr style="height: 30px; border-left: 2px solid; color:white" />
 
